<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/welcome_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcomeMsg"
                android:textColor="#000"
                android:textSize="25dp"
                android:paddingTop="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:background="@drawable/back"
                />

            <TextView
                android:id="@+id/battery_percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Battery_p_txt"
                android:textColor="#000"
                android:textSize="20dp"
                android:paddingTop="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                />
            <TextView
                android:id="@+id/textView"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                />
            <SeekBar
                android:id="@+id/seekBar"
                android:max="100"
                android:progress="50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:layout_gravity="center"

                />
            <CheckBox
                android:id="@+id/checkbox_extraInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Extra_info"
                android:textSize="20dp"
                android:paddingBottom="30dp"
                android:paddingTop="30dp"
                />
            <CheckBox
                android:id="@+id/checkbox_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_wifi"
                android:textSize="20dp"
                android:paddingBottom="30dp"
                android:paddingTop="30dp"
                />
            <CheckBox
                android:id="@+id/checkbox_connectivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_connectivity"
                android:textSize="20dp"
                android:paddingBottom="30dp"
                android:paddingTop="30dp"
                />
            <CheckBox
                android:id="@+id/checkbox_homework"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_homework"
                android:textSize="20dp"
                android:paddingBottom="30dp"
                android:paddingTop="30dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url_inform_text"
                android:textSize="15dp"
                android:visibility="gone"
                android:id="@+id/url_inform_text"
                android:padding="10dp"
                />
            <EditText
                android:id="@+id/url_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/url_edit_text"
                android:visibility="gone"
                android:textSize="15dp"
                android:textColor="@android:color/holo_blue_dark"
                android:padding="10dp"
                />
            <Switch
                android:id="@+id/switch_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_url"
                android:textSize="15dp"
                android:padding="10dp"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/start_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="#ffff00"
                android:padding="15dp"
                android:text="@string/Start_btn"
                android:textColor="#000"
                android:layout_gravity="center"
                android:background="@drawable/back"
                />
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_a_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="45dp"
        android:contentDescription=""
        android:src="@drawable/ic_cancel_services_black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>